--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainApplication"/>
+        <activity
+            android:name=".MainApplication"
+            android:label="Ciudades"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
